hphp/hack/test/typecheck/const_attribute/static/redeclare_to_const.php.exp
File "redeclare_to_const.php", line 4, characters 32-33:
This property is not __Const (Typing[4204])
File "redeclare_to_const.php", line 5, characters 51-52:
This property is __Const
